# django-dataframe-store

./: setup.cfg
dataframe_store/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  utils.py  views.py
dataframe_store/migrations/: 0001_initial.py  0002_parent.py  0003_extra.py  0004_auto_20190901_1934.py
dataframe_store/tests/testproject/testproject/: settings.py
