[metadata]
name = dataframe_store
url = attr: dataframe_store.__url__ 
version = attr: dataframe_store.__version__
license = attr: dataframe_store.__license__
license_file = LICENSE
description = attr: dataframe_store.__doc__
long_description = file: README.rst
long_description_content_type = text/x-rst
author = attr: dataframe_store.__author__
author_email = attr: dataframe_store.__email__
install_requires =
  swapper
  django-mptt
platforms =
  Linux
  macOS
  Windows
keywords =
  database
  django
  pandas
  numpy
  dataframe
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Web Environment
  Environment :: Console
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Database
  Topic :: Scientific/Engineering
  
project_urls =
  Code = attr: dataframe_store.__url__

[options]
packages = find:
zip_safe = false
install_requires =

[bdist_wheel]
python-tag = py3

[coverage:run]
branch = True
include = dataframe_store/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
omit =
    .*
